# scene_graph_annotator

./: .gitignore  CLIO_REALSENSE_USAGE.md  Dockerfile  Dockerfile_zed  README.md  create_alias.sh  download_models.sh  model_Readme.md  regions.yaml
clio_annotator/: CLIO_REALSENSE_USAGE.md  CMakeLists.txt  package.xml  setup.py
clio_annotator/config/: arg_params.yaml
clio_annotator/environments/: README.md
clio_annotator/environments/home/: regions.yaml  tasks.yaml
clio_annotator/environments/office/: regions.yaml  tasks.yaml
clio_annotator/environments/supermarket/: regions.yaml  tasks.yaml
clio_annotator/launch/: clio_aeg.launch  clio_realsense.launch  clio_realsense_old.launch
clio_annotator/msg/: AnnotatedDsgUpdate.msg  Annotation.,sg
clio_annotator/src/: __init__.py  clio_aeg_annotator.py  clio_aeg_llm.py  clio_aeg_llm_fixed.py  clio_arg_annotator.py  general_LLM.py  general_LLM_fixed.py
clio_annotator/src/base_prompts/AEG/: area_analysis.txt  local_context_pickupable.txt  local_context_receptacle.txt  placement_generator.txt  placement_scoring.txt  receptacle_scoring.txt  semantic_edges.txt  system_prompt.txt
clio_annotator/src/clio_aeg_annotation/: clio_aeg_llm.py  clio_arg_annotator.py
