<?xml version="1.0"?>
<package format="2">
  <name>clio_annotator</name>
  <version>0.1.0</version>
  <description>ROS node for annotating Clio scene graphs with AEG-LLM affordances and semantics.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hydra_msgs</build_depend> <!-- For DsgUpdate -->

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hydra_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hydra_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Python deps for LLM (install via pip in workspace) -->
  <exec_depend>python3-openai</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-instructor</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-open3d</exec_depend>

  <!-- Clio/Hydra integration; assume installed -->
  <exec_depend>clio_ros</exec_depend>
</package>